--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
+html {
+  min-height: 100%;
+  background-color: #F4F6F9;
+}
+
 body {
   margin: 0;
+  min-height: 100%;
   background-color: #F4F6F9;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -17,5 +23,6 @@ body {
 
 #app {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  background-color: #F4F6F9;
 }
